# OpenMemoryICP

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  build.sh  conversation_summary.md  detailed_memory_test.js  dfx.json  index.html  manual_save_instructions.md  openmemory_icp_design.md  playwright_frontend_test.js  save_conversation.js  save_conversation_complete.js  save_conversation_working.js  test_api_memory_save.js  test_correct_principal.js  test_frontend_auth_fix.js  test_frontend_memory.js
OpenMemoryUI/: .env.example  .gitignore  .mcp.json  MCP_SETUP.md  PLAYWRIGHT_UI_IMPROVEMENTS.md  README.md  comprehensive-test-report.md  comprehensive-test.mjs  debug-api-config-report.json  debug-screenshot.mjs  debug-settings-structure.mjs  debug-with-console.mjs  final-ui-analysis.mjs  index.html  package-lock.json  package.json  playwright-detailed-analysis.mjs  playwright-ui-analysis.mjs  playwright.config.ts  simple-test.mjs  start.sh  tailwind.config.js  test-add-memory-complete.mjs  test-add-memory-mainnet.mjs  test-add-memory.mjs  test-api-config-debug.mjs  test-api-save-final.mjs  test-api-save-working.mjs  test-backend-connection.mjs  test-browser-console.mjs  test-mainnet-connection.mjs  test-save-memory.mjs  test-ui-complete.mjs  test-ui-navigation.mjs  vite.config.ts
assets/: index-BGxryBPL.js  index-C7pNVVFl.css
openmemory-cli/: Cargo.toml  README.md
openmemory-cli/src/: api_client.rs  config.rs  local_identity.rs  main.rs
src/: auth.rs  clustering.rs  embedding.rs  errors.rs  http_handlers.rs  http_handlers_backup.rs  internet_identity.rs  lib.rs  (+8 more)
(+41 files in other folders)
