[package]
name = "openmemory_icp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
sha2 = "0.10"
url = "2.4"
urlencoding = "2.1"
hex = "0.4"
futures = "0.3"

[dependencies.ic-cdk-macros]
version = "0.13"

[profile.release]
opt-level = 3
lto = true
strip = true