[package]
name = "openmemory-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ic-agent = "0.38.2"
ic-utils = "0.38.2"
candid = "0.10"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
tempfile = "3.14"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.14"